Examples/test-suite/errors/pp_unknowndirective5.stderr
pp_unknowndirective5.i:20: Error: Syntax error in input(1).
